--- a/www/index.html
+++ b/www/index.html
@@ -36,8 +36,6 @@
     <script src="js/services.js"></script>
   </head>
   <body ng-app="starter">
-    <ion-nav-view>
-      
-    </ion-nav-view>
+    <ion-nav-view></ion-nav-view>
   </body>
 </html>
