--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -36,8 +36,6 @@
     <script src="js/services.js"></script>
   </head>
   <body ng-app="starter" class="platform-android platform-cordova platform-webview">
-    <ion-nav-view>
-      
-    </ion-nav-view>
+    <ion-nav-view></ion-nav-view>
   </body>
 </html>
